[tool.poetry]
name = "des"
version = "0.1.0"
description = "Discrete Event Simulation Framework"
authors = ["John Merlie <johnmerlie@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.26.0"
rich = "^13.6.0"
click = "^8.1.7"
networkx = "^3.2.1"
msgpack = "^1.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
