[tool.poetry]
name = "des"
version = "0.1.0"
description = "Discrete Event Simulation Framework"
authors = ["John Merlie <johnmerlie@gmail.com>"]
packages = [{include = "des", from = "src"}]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.26.0"
rich = "^13.6.0"
click = "^8.1.7"
networkx = "^3.2.1"
ormsgpack = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
