[tool.poetry]
name = "pydes"
version = "0.1.0"
description = "Discrete Event Simulation Framework"
authors = ["John Merlie <johnmerlie@gmail.com>"]
packages = [{include = "pydes", from = "src"}]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
rich = "^13.6.0"
click = "^8.1.7"
networkx = "^3.2.1"
msgpack = "^1.0.7"
msgpack-types = "^0.2.0"
numpy = "^1.26.1"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipykernel = "^6.26.0"
scalene = "^1.5.31.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
